<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2c3e50"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditActivity" >

    <EditText
        android:id="@+id/editTitre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10" 
        android:textColorHint="#7f8c8d"
        android:textColor="#bdc3c7"
        android:hint="@string/titre"
        android:inputType="textAutoCorrect">
    </EditText>
    
    <Button
        android:id="@+id/btnEditer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:text="@string/save" 
        android:background="#16a085"
        android:textColor="#ecf0f1"
	/>
    
    <EditText
        android:id="@+id/editNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTitre"
        android:layout_marginTop="20dp"
        android:textColorHint="#7f8c8d"
        android:textColor="#bdc3c7"
        android:ems="10" 
        android:hint="@string/note"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:gravity="top">
    </EditText>
</RelativeLayout>